<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:id="@+id/rootview"
    tools:context=".SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="0dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/geomfigures"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:id="@+id/image"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:src="@drawable/geometry"
        android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Spinner
        android:id="@+id/picker"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:scrollbarSize="20dp"
        android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/entry1"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit"
            android:hint="@string/enter1"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/entry2"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit"
            android:hint="@string/enter2"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:onClick="DisplayAlert"
            android:text="@string/enterbut"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="27dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>